Added example gifs, Added link to alphanumeric blog post

--- a/src/pug/alpakka/manual/profile_desktop.pug
+++ b/src/pug/alpakka/manual/profile_desktop.pug
@@ -22,6 +22,8 @@ block content
     li Glyphs are editable in the profile, so they can be customized for preferences or needs.
     li Space, delete, enter and escape are still available on the ABXY buttons when using this method.
   img.wm.mt(src='/static/manual/glyph-stick.png')
+  br
+  img.mt(src='/static/blog/glyph-stick.gif' width='200')
   hr
 
   h3 Daisywheel (SMS variant)
@@ -35,8 +37,12 @@ block content
     li Space, delete, enter and escape are still available on the ABXY buttons when the thumbstick is centered.
 
   img.wm.mt(src='/static/manual/daisywheel.png')
+  br
+  img.mt(src='/static/blog/daisywheel.gif' width='350')
+
   hr
 
   h3 Additional links
   ul
     li: +a('profiles') How to select the active profile
+    li: +a('/blog/alphanumeric_input') Alphanumeric input research blog entry
