Removed held row and flipped the table again, Added link to alphanumeric video

--- a/src/pug/alpakka/manual/profile_desktop.pug
+++ b/src/pug/alpakka/manual/profile_desktop.pug
@@ -46,3 +46,4 @@ block content
   ul
     li: +a('profiles') How to select the active profile
     li: +a('/blog/alphanumeric_input') Alphanumeric input research blog entry
+    li: +ax('https://www.youtube.com/watch?v=sVtkRMTe34o') Alphanumeric input demo video
