Renamed touch threshold to touch sensitivity. Do not show microsecond values in the manual

--- a/src/pug/alpakka/manual/tune.pug
+++ b/src/pug/alpakka/manual/tune.pug
@@ -65,7 +65,7 @@ block content
         div 15%
     tr
       td.middle
-        h3 Touch threshold
+        h3 Touch sensitivity
         div Hold Home #[+home]
         div + hold Hat right #[+hat]→
       td.center
@@ -74,16 +74,16 @@ block content
         i (Default)
       td.center
         img(src='/static/manual/led_tune_right_1.png' width='50px')
-        div 2 μs
+        div Low
       td.center
         img(src='/static/manual/led_tune_right_2.png' width='50px')
-        div 3 μs
+        div Mid
       td.center
         img(src='/static/manual/led_tune_right_3.png' width='50px')
-        div 5 μs
+        div High
       td.center
         img(src='/static/manual/led_tune_right_4.png' width='50px')
-        div 8 μs
+        div Very high
     tr
       td.middle
         h3 Mouse sensitivity
