--- a/src/pug/blog/talking_about_us.pug
+++ b/src/pug/blog/talking_about_us.pug
@@ -11,6 +11,11 @@ block content
 
   ul
     li #[+ax('https://www.youtube.com/watch?v=GehkHsNhwGA') RambleCan] #[em (video)] Alpakka Dual Gyro Controller Impressions -【Warhammer 40k: Boltgun】
+    ul
+      li: i "Pretty darn cool! I'm digging it!"
+      li: i "It's refreshing that there is a new idea in the controller-sphere"
+      li: i "this is a fun one. I'm enjoying it."
+
     li #[+ax('https://www.heise.de/news/Alpakka-Der-Wunsch-Gamecontroller-mit-Mausfunktion-8977493.html') Heise Online] Alpakka: The Dream-Gamecontroller with Mouse-functionality
     ul
       li: i "The Alpakka can be completely customized via software and hardware. Thanks to gyro sensors it even replaces the mouse and thus brings uncompromising gaming to the couch."
