Added a few RambleCan quotes.

--- a/src/pug/blog/talking_about_us.pug
+++ b/src/pug/blog/talking_about_us.pug
@@ -14,7 +14,7 @@ block content
     ul
       li: i "Pretty darn cool! I'm digging it!"
       li: i "It's refreshing that there is a new idea in the controller-sphere"
-      li: i "this is a fun one. I'm enjoying it."
+      //li: i "this is a fun one. I'm enjoying it."
 
     li #[+ax('https://www.heise.de/news/Alpakka-Der-Wunsch-Gamecontroller-mit-Mausfunktion-8977493.html') Heise Online] Alpakka: The Dream-Gamecontroller with Mouse-functionality
     ul
