Updated touch sens definitions

--- a/src/pug/alpakka/manual/tune.pug
+++ b/src/pug/alpakka/manual/tune.pug
@@ -114,12 +114,12 @@ block content
   p Defines how much of the inner movement of the thumbstick will be ignored, increase this according to your thumbstick wear (thumbstick centering spring will get softer over time). Please check #[+a('calibrate') Calibration] instructions before tweaking this parameter.
   hr
 
-  h3 Touch threshold
+  h3 Touch sensitivity
   p Defines how sensitive the touch surface is. Depending on which conductive material was used on the touch surface you may want to tweak this parameter:
   ul
-    li The automatic setting will adjust the threshold dynamically.
-    li Set a low static threshold if the detection is not registered consistently.
-    li Set a high static threshold if the detection is taking too long to be released after the finger is lifted.
+    li The automatic setting will adjust the sensitivity dynamically.
+    li Set a higher fixed sensitivity if the detection is not registered consistently.
+    li Set a lower fixed sensitivity if the detection is taking too long to be released after the finger is lifted.
   hr
 
   h3 Mouse sensitivity
