Added progress report 13

--- a/src/pug/blog/report_12.pug
+++ b/src/pug/blog/report_12.pug
@@ -5,7 +5,7 @@ block append subtitle
 
 block content
   h2 Progress report #12
-  +news_header('08 May 2023', 'report_11', '')
+  +news_header('08 May 2023', 'report_11', 'report_13')
 
   h3 More than 500 Discord users
   p Our community of Discord users has now grown to more than 500.
@@ -22,7 +22,7 @@ block content
   //-h3 Improved 3D model printing documentation
   //-h3 Working on wireless Alpakka
   //-h3 Review unit request from Linux Media
-  
+
   h3 Returnal video
   p We are still having fun, playing computer games. We now published a new video, demonstrating the Alpakka with #[+ax('https://www.youtube.com/watch?v=i3ULDtX_gHE') Returnal] from Housemarque. Check it out!
   hr
