--- a/src/pug/blog/report_13.pug
+++ b/src/pug/blog/report_13.pug
@@ -10,7 +10,7 @@ block content
   h3 New PCB version
   p We released Alpakka PCB version #[+ax('https://github.com/inputlabs/alpakka_pcb/releases/tag/0.90.0') b0.90.0] (#[em b] for board):
   ul
-    li The most important change is the improvement of the touch sensing solution by increasing the granularity of the capacitance (a bigger resitor).
+    li The most important change is the improvement of the touch sensing solution by increasing the granularity of the capacitance (a bigger resistor).
     li Many other improvements and fixes (#[+ax('https://github.com/inputlabs/alpakka_pcb/releases/tag/0.90.0') release notes]).
   br
   img(src='/static/blog/pcb_0_90_0.jpg').wm
@@ -30,7 +30,7 @@ block content
   ul
     li Support for PCB version #[em b0.90.0].
     li Rework of the #[em automatic] touch sensitivity algorithm, and more robust touch sensing.
-    li A new manual guided test procedure, to identify potential issues with the buttons or axis. (Contribution of GitHub user #[em @tomas-pecserke]).
+    li A new manual guided test procedure, to identify potential issues with the buttons or axis. (Contribution by GitHub user #[em @tomas-pecserke]).
     li Many other improvements and fixes (#[+ax('https://github.com/inputlabs/alpakka_firmware/releases/tag/0.90.0') release notes]).
   hr
 
