Added hald anniversary blog post and community gallery

--- a/src/pug/_mixins.pug
+++ b/src/pug/_mixins.pug
@@ -24,7 +24,7 @@
 
   const parent = {
     db:            '/db/stats',
-    blog:          '/blog/report_13',
+    blog:          '/blog/half_anniversary',
     alpakkaManual: '/alpakka/manual/mouse',
   }
 
