--- a/src/pug/blog/_blog.pug
+++ b/src/pug/blog/_blog.pug
@@ -25,6 +25,7 @@ block page
 
         h3 News
         div
+          +wikilink('half_anniversary') Half anniversary
           +wikilink('report_13') Progress report 13
           +wikilink('report_12') Progress report 12
           +wikilink('report_11') Progress report 11
