--- a/src/pug/blog/report_13.pug
+++ b/src/pug/blog/report_13.pug
@@ -5,7 +5,7 @@ block append subtitle
 
 block content
   h2 Progress report #13
-  +news_header('26 May 2023', 'report_12', '')
+  +news_header('26 May 2023', 'report_12', 'half_anniversary')
 
   h3 New PCB version
   p We released Alpakka PCB version #[+ax('https://github.com/inputlabs/alpakka_pcb/releases/tag/0.90.0') b0.90.0] (#[em b] for board):
