Moved community gallery under contribute

--- a/src/pug/alpakka/_title.pug
+++ b/src/pug/alpakka/_title.pug
@@ -4,5 +4,5 @@
 h1.dynamic
   a(class=active(PAGE=='alpakka') href='/alpakka') Alpakka
   a.sub(class=active(SECTION_2=='manual') href=parent.alpakkaManual) Manual
-  a.sub(class=active(PAGE=='gallery' || PAGE=='gallery_community') href='/alpakka/gallery') Gallery
+  a.sub(class=active(PAGE=='gallery') href='/alpakka/gallery') Gallery
   a.sub(class=active(PAGE=='components') href='/alpakka/components') Components
