--- a/src/pug/alpakka/gallery.pug
+++ b/src/pug/alpakka/gallery.pug
@@ -43,6 +43,6 @@ block page
       +imglink('/static/img/alpakka_black_silver_info.jpg')
       +imglinkurl(
         '/static/wild/wild_lime_pair.jpg',
-        'gallery_community',
+        '/contribute/gallery_community',
         'Wild Alpakkas from the community'
       )
