--- a/src/pug/_mixins.pug
+++ b/src/pug/_mixins.pug
@@ -41,11 +41,11 @@ mixin nav
       if (name=='devices' && devices.includes(SECTION)) return 'active'
       return ''
     }
-  div.tab(class=active('devices')):    +a('/devices')    Devices
-  div.tab(class=active('contribute')): +a('/contribute') Contribute
-  div.tab(class=active('db')):         +a(parent.db)     Accessibility DB
-  div.tab(class=active('blog')):       +a(parent.blog)   Blog
-  div.tab:                             +ax(org.shop)     Shop
+  div.tab(class=active('devices')):    +a('/devices')                Devices
+  div.tab(class=active('contribute')): +a('/contribute/open_source') Contribute
+  div.tab(class=active('db')):         +a(parent.db)                 Accessibility DB
+  div.tab(class=active('blog')):       +a(parent.blog)               Blog
+  div.tab:                             +ax(org.shop)                 Shop
 
 mixin wikilink(href, external=false)
   - const active = (href==PAGE)
