--- a/src/pug/_mixins.pug
+++ b/src/pug/_mixins.pug
@@ -22,8 +22,9 @@
     shop: 'https://inputlabs.squarespace.com',
   }
 
-  const parent = {
+  const default = {
     db:            '/db/stats',
+    contribute:    '/contribute/open_source',
     blog:          '/blog/half_anniversary',
     alpakkaManual: '/alpakka/manual/mouse',
   }
@@ -41,11 +42,11 @@ mixin nav
       if (name=='devices' && devices.includes(SECTION)) return 'active'
       return ''
     }
-  div.tab(class=active('devices')):    +a('/devices')                Devices
-  div.tab(class=active('contribute')): +a('/contribute/open_source') Contribute
-  div.tab(class=active('db')):         +a(parent.db)                 Accessibility DB
-  div.tab(class=active('blog')):       +a(parent.blog)               Blog
-  div.tab:                             +ax(org.shop)                 Shop
+  div.tab(class=active('devices')):    +a('/devices')         Devices
+  div.tab(class=active('contribute')): +a(default.contribute) Contribute
+  div.tab(class=active('db')):         +a(default.db)         Accessibility DB
+  div.tab(class=active('blog')):       +a(default.blog)       Blog
+  div.tab:                             +ax(org.shop)          Shop
 
 mixin wikilink(href, external=false)
   - const active = (href==PAGE)
