--- a/src/pug/alpakka/_title.pug
+++ b/src/pug/alpakka/_title.pug
@@ -3,6 +3,6 @@
 
 h1.dynamic
   a(class=active(PAGE=='alpakka') href='/alpakka') Alpakka
-  a.sub(class=active(SECTION_2=='manual') href=default.alpakkaManual) Manual
+  a.sub(class=active(SECTION_2=='manual') href=redirect.alpakkaManual) Manual
   a.sub(class=active(PAGE=='gallery') href='/alpakka/gallery') Gallery
   a.sub(class=active(PAGE=='components') href='/alpakka/components') Components
