--- a/src/pug/contribute/_title.pug
+++ b/src/pug/contribute/_title.pug
@@ -2,6 +2,6 @@
   const active = (bool) => bool ? 'active' : 'inactive'
 
 h1.dynamic
-  a.sub(class=active(PAGE=='open_source') href='/contribute/open_source') Open source
+  a.sub(class=active(PAGE=='open_source') href='/contribute/open_source') Open Source
   a.sub(class=active(PAGE=='patreon') href='/contribute/patreon') Patreon
-  a.sub(class=active(PAGE=='gallery_community') href='gallery_community') Community gallery
+  a.sub(class=active(PAGE=='gallery_community') href='gallery_community') Community Gallery
