Added PCB to components page

--- a/src/pug/alpakka/components.pug
+++ b/src/pug/alpakka/components.pug
@@ -22,7 +22,7 @@ block page
     div.box
       h2 Printed Circuit Board
       p The main board where all the buttons, gyro, thumbstick, LEDs and most other electronics are.
-      p Read the documentation about #[+a('/alpakka/manual/diy_pcb') making an order] from PCB manufacturer companies.
+      p Read the documentation about #[+a('/alpakka/manual/diy_pcb') making an order] from PCB manufacturer companies, or get it directly from us.
       table.data
         tr
           td Alpakka PCB KiCad schematics
@@ -30,6 +30,9 @@ block page
         tr
           td Alpakka PCB ready-to-order files
           td: +ax('https://github.com/inputlabs/alpakka_pcb/releases/latest') GitHub
+        tr
+          td Alpakka PCB with soldered SMD components.
+          td: +ax('https://inputlabs.squarespace.com/everyone/p/alpakka-pcb') Input Labs shop
 
     div.box
       h2 Case and buttons
