--- a/src/pug/alpakka/manual/diy_case.pug
+++ b/src/pug/alpakka/manual/diy_case.pug
@@ -10,6 +10,7 @@ block content
   h3 3D models
   p The source designs are available from the #[+ax('https://github.com/inputlabs/alpakka_case') Alpakka 3D-print] repository, along with the #[+ax('https://github.com/inputlabs/alpakka_case/releases/latest') rendered models for each release] of the reference design.
   p The models are optimized for modern FDM (Fused Deposition Modeling) printers, which should easily be able to print all parts of the Alpakka. 
+  hr
 
   h3 3D printer
   p The parts are designed to not require any additional supports, even though for specific parts, such as the thumbstick and the home button, some supports are recommended for optimal performance (see below). Printers are expected to print at least 10 millimeter long bridges with reasonable accuracy.
@@ -198,7 +199,7 @@ block content
       td ~1 hour
   
   p These should be printed with a lower layer height in order to reduce grinding between the buttons and the case.
-  p To ensure a good quality, it is recommended that the overhanging part of the thumbstick (from 13 - 16 mm) are printed with a layer hight of 0.15 mm and at a slower speed.
+  p To ensure a good quality, it is recommended that the overhanging part of the thumbstick (from 13 - 16 mm) are printed with a layer height of 0.15 mm and at a slower speed.
   img.hm.mt.mr(src='/static/manual/settings.png')
   p The thumbstick will also require support enforcers on areas indicated here in blue. (For completeness the areas indicated in red do not require supports, and should not have any supports for easier post-processing).
   img.hm.mt.mr(src='/static/manual/thumbstick.png')
