--- a/src/pug/alpakka/manual/diy_case.pug
+++ b/src/pug/alpakka/manual/diy_case.pug
@@ -290,7 +290,7 @@ block content
   p To be more environmentally friendly we usually print these in recycled PLA.
   hr
 
-  p We may at a later stage also provide these settings in the form of 3MF files. We have, however, experienced significant differences between printer models (and even printers as printing environments), which would necessitate separate 3MF files for each printer model.
+  p We may at a later stage also provide these settings in the form of 3MF files. We have, however, experienced significant differences between printer models (and even printers and printing environments), which would necessitate separate 3MF files for each printer model.
 
   h3 Next
   ul
