Added more explanation regarding 3MF

--- a/src/pug/alpakka/manual/diy_case.pug
+++ b/src/pug/alpakka/manual/diy_case.pug
@@ -291,6 +291,7 @@ block content
   hr
 
   p We may at a later stage also provide these settings in the form of 3MF files. We have, however, experienced significant differences between printer models (and even printers and printing environments), which would necessitate separate 3MF files for each printer model.
+  p Additionally, 3MF files cannot contain information regarding object-specific settings, such as for the thumbstick in set F above, without the actual model, thus requiring the model to be part of the 3MF file. Accordingly, any change in the model would require a change in every of those printer-model-specific 3MF files.
 
   h3 Next
   ul
