--- a/src/pug/alpakka/manual/diy_case.pug
+++ b/src/pug/alpakka/manual/diy_case.pug
@@ -142,7 +142,7 @@ block content
       td Printing time
       td ~3.5 hours
   
-  p These should be printed with a lower layer height in order to reduce grinding between the buttons and the case, and to ensure a proper, central fit of the scrollwheel-shaft in the scrollwheel itself.
+  p These should be printed with a reduced layer height in order to reduce grinding between the buttons and the case, and to ensure a proper, central fit of the scrollwheel-shaft in the scrollwheel itself.
   hr
 
   h4 Set E
@@ -201,7 +201,7 @@ block content
   p These should be printed with a lower layer height in order to reduce grinding between the buttons and the case.
   p To ensure a good quality, it is recommended that the overhanging part of the thumbstick (from 13 - 16 mm) are printed with a layer height of 0.15 mm and at a slower speed.
   img.hm.mt.mr(src='/static/manual/settings.png')
-  p The thumbstick will also require support enforcers on areas indicated here in blue. (For completeness the areas indicated in red do not require supports, and should not have any supports for easier post-processing).
+  p The thumbstick will also require support enforcers on areas indicated here in blue. (For completeness the areas indicated in red do not require supports. For easier post-processing any kinds of supports should be avoided in the areas indicated in red).
   img.hm.mt.mr(src='/static/manual/thumbstick.png')
   p Please note also that for esthetic reasons the home button is at an 8.4 degree angle, which will also require appropriate supports. While not strictly necessary, it makes for a more pleasing, level top surface.
   hr
