--- a/src/pug/_mixins.pug
+++ b/src/pug/_mixins.pug
@@ -26,7 +26,7 @@
   const redirect = {
     db:            '/db/stats',
     contribute:    '/contribute/open_source',
-    blog:          '/blog/half_anniversary',
+    blog:          '/blog/report_14',
     alpakkaManual: '/alpakka/manual/mouse',
   }
 
