--- a/src/pug/blog/half_anniversary.pug
+++ b/src/pug/blog/half_anniversary.pug
@@ -5,7 +5,7 @@ block append subtitle
 
 block content
   h2 Half Anniversary
-  +news_header('29 May 2023', 'report_13', '')
+  +news_header('29 May 2023', 'report_13', 'report_14')
 
   h3 6 months since we went live
   p It's Input Labs halfnniversary! on 22th of November of 2022 we made this project public, and since then we received a massive amount of positive feedback, hundreds of friends joined the Discord server, and we even got help and contributions from professional electrical engineers, industrial designers, and embedded software engineers. We learnt a lot, and we made a lot of progress, but there is still much more to do, together.
