--- a/src/pug/blog/report_14.pug
+++ b/src/pug/blog/report_14.pug
@@ -14,14 +14,15 @@ block content
 
   h3 PCB in distribution channel
   p The last component of the Alpakka that was still missing from our distribution channel was the PCB. Those who responded to our questionnaire indicated that the need to purchase the PCB separately, the minimum number of PCBs to order, as well the associated cost were some of the biggest issues so far.
-  p Now we have remedied this situation and you can now find the PCB #[+ax('https://inputlabs.squarespace.com/everyone/p/alpakka-pcb') in our normal distribution channel]), together with all the other components, necessary to assemble your very own Alpakka.
+  p Now we have remedied this situation and you can find the PCB #[+ax('https://inputlabs.squarespace.com/everyone/p/alpakka-pcb') in our normal distribution channel], together with all the other components, necessary to assemble your very own Alpakka.
   hr
   
   h3 Restructured models and instructions
-  p We have received many questions regarding the 3D printing of the Alpakka, which we wanted to address. We have now separated the models (in the STL files) from the settings for printing them. This allows us to make modifications to the models independently. You can find the new, detailed settings and instructions #[+a('/alpakka/manual/diy_case') in the manual].
+  p We have received many questions regarding the 3D printing of the Alpakka, which we wanted to address. We have now separated the 3D models (in the STL files) from the settings for printing them. This allows us to make modifications to the models independently and quickly provide a #[+ax('https://github.com/inputlabs/alpakka_case/releases/latest') new release].
+  p You can find the new, detailed settings and instructions #[+a('/alpakka/manual/diy_case') in the manual].
   p We tried to find a way of providing suitable settings in the form of 3MF files, while still keeping those settings separate from the models. Unfortunately we found that certain settings, such as the supports for specific parts like the thumbstick require the model to be part of the 3MF file.
   img(src='/static/manual/thumbstick.png').
-  p 3MF file and the settings for 3D printing parts are also very dependent on the used slicing program, and vary significantly between different printer models, or even individual printers and environments. As a result, for now we focus on providing the models in the form of STL files, while providing comprehensive settings for their printing in the manual.
+  p 3MF files and the settings for 3D printing parts are also very dependent on the used slicing program, and vary significantly between different printer models, or even individual printers and environments, as well as filaments. As a result, for now we focus on providing the models in the form of STL files, while providing comprehensive settings for their printing in the manual.
   hr
 
   p Thanks a lot for the support! <br> - M&M <3
